// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should apply styles correctly 1`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block custom-btn"
  style="font-size:200px"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Hello
</button>
`;

exports[`Button should apply styles correctly 2`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text--theme-primary md-ink--primary md-inline-block custom-btn"
  style="font-size:200px"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Hello
</button>
`;

exports[`Button should apply styles correctly 3`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text--theme-secondary md-ink--secondary md-inline-block custom-btn"
  style="font-size:200px"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Hello
</button>
`;

exports[`Button should apply styles correctly 4`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-text md-inline-block custom-btn"
  style="font-size:200px"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Hello
</button>
`;

exports[`Button should apply styles correctly 5`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block custom-btn"
  style="font-size:200px"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Hello
</button>
`;

exports[`Button should apply styles correctly 6`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--secondary md-background--secondary-hover md-inline-block custom-btn"
  style="font-size:200px"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Hello
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons as children when using the icon or floating types 1`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <i
    class="md-icon material-icons md-text--inherit"
  >
    close
  </i>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons as children when using the icon or floating types 2`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="2i90rdsjf"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons as children when using the icon or floating types 3`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#some-href"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons as children when using the icon or floating types 4`] = `
<button
  class="md-btn md-btn--icon md-btn--floating md-pointer--hover md-paper md-paper--2 md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <i
    class="md-icon material-icons md-text--inherit"
  >
    close
  </i>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons as children when using the icon or floating types 5`] = `
<button
  class="md-btn md-btn--icon md-btn--floating md-pointer--hover md-paper md-paper--2 md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="2i90rdsjf"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons as children when using the icon or floating types 6`] = `
<button
  class="md-btn md-btn--icon md-btn--floating md-pointer--hover md-paper md-paper--2 md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#some-href"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 1`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator"
  >
    <i
      class="md-icon material-icons md-text--inherit"
    >
      close
    </i>
    <span
      class="md-icon-text"
    >
      Close
    </span>
  </div>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 2`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator"
  >
    <svg
      class="md-icon md-text--inherit"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="2i90rdsjf"
      />
    </svg>
    <span
      class="md-icon-text"
    >
      Close
    </span>
  </div>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 3`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator"
  >
    <svg
      class="md-icon md-text--inherit"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#some-href"
      />
    </svg>
    <span
      class="md-icon-text"
    >
      Close
    </span>
  </div>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 4`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator"
  >
    <i
      class="md-icon material-icons md-text--inherit"
    >
      close
    </i>
    <span
      class="md-icon-text"
    >
      Close
    </span>
  </div>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 5`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator"
  >
    <svg
      class="md-icon md-text--inherit"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="2i90rdsjf"
      />
    </svg>
    <span
      class="md-icon-text"
    >
      Close
    </span>
  </div>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 6`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator"
  >
    <svg
      class="md-icon md-text--inherit"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#some-href"
      />
    </svg>
    <span
      class="md-icon-text"
    >
      Close
    </span>
  </div>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 7`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <i
    class="md-icon material-icons md-text--inherit"
  >
    close
  </i>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 8`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="2i90rdsjf"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 9`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#some-href"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 10`] = `
<button
  class="md-btn md-btn--icon md-btn--floating md-pointer--hover md-paper md-paper--2 md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <i
    class="md-icon material-icons md-text--inherit"
  >
    close
  </i>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 11`] = `
<button
  class="md-btn md-btn--icon md-btn--floating md-pointer--hover md-paper md-paper--2 md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="2i90rdsjf"
    />
  </svg>
</button>
`;

exports[`Button should be able to render FontIcons or SVGIcons using the iconEl prop 12`] = `
<button
  class="md-btn md-btn--icon md-btn--floating md-pointer--hover md-paper md-paper--2 md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#some-href"
    />
  </svg>
</button>
`;

exports[`Button should render as either a <button> or an <a> based on the href prop 1`] = `
<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  />
  Woop
</button>
`;

exports[`Button should render as either a <button> or an <a> based on the href prop 2`] = `
<a
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
  href="#woop"
>
  <div
    class="md-ink-container"
  />
  Woop
</a>
`;
